--- a/.github/.github/workflows/run_script.yml
+++ b/.github/.github/workflows/run_script.yml
@@ -13,7 +13,10 @@ jobs:
     steps:
       - name: 🛎️ Checkout Repository
         uses: actions/checkout@v4
-
+      - name: Set up Python  
+        uses: actions/setup-python@v4  
+        with:  
+          python-version: "3.10"  
       - name: 🛠️ Install Dependencies
         run: pip install -r requirements.txt
 
