--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,8 @@ jobs:
             exit 1
           fi
 
-      - name: 🔓 Decode and Save Secret Key
-        run: |
-          echo "${{ secrets.SECRET_KEY }}" | base64 --decode > secret.key
+      - name: 🔓 Save Secret Key
+        run: echo "${{ secrets.SECRET_KEY }}" > secret.key
 
       - name: 🔓 Decrypt and Run Script
         run: python encrypter.py
