--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
       - name: 🛎️ Checkout Repository
         uses: actions/checkout@v4
 
-      - name: ⚙ Set up Python  
-        uses: actions/setup-python@v4  
-        with:  
-          python-version: "3.10"  
+      - name: ⚙ Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
       - name: 🛠 Install Dependencies
         run: pip install -r requirements.txt
@@ -29,8 +29,7 @@ jobs:
             exit 1
           fi
 
-      - name: 🔓 Save Secret Key
-        run: echo "${{ secrets.SECRET_KEY }}" > secret.key
-
       - name: 🔓 Decrypt and Run Script
         run: python encrypter.py
+        env:
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
